--- a/Umbrella/src/main/res/values/styles.xml
+++ b/Umbrella/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
         <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
     </style>
 
+    <style name="Theme.Settings" parent="Theme.AppCompat.Light">
+        <item name="android:colorBackground">@color/text_color_secondary</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
 </resources>
